--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Flask==0.10.1
 Flask-SocketIO==0.6.0
+Flask-WTF==0.12
 gevent==1.0.2
 gevent-socketio==0.3.6
 gevent-websocket==0.9.5
@@ -10,3 +11,4 @@ Jinja2==2.8
 MarkupSafe==0.23
 SQLAlchemy==1.0.8
 Werkzeug==0.10.4
+WTForms==2.0.2
